Fifth Commit - Data processed for all the Original Six teams

--- a/bruins/web_scraping_nhl.ipynb
+++ b/bruins/web_scraping_nhl.ipynb
@@ -189,7 +189,7 @@
     "# Extract tables\n",
     "dfs = pd.read_html(url)\n",
     "\n",
-    "# Get fourth table                                                                                                           \n",
+    "# Get the \"Scoring Regular Season\" table                                                                                                      \n",
     "df = dfs[3]\n",
     "\n",
     "print(df)"
@@ -216,9 +216,7 @@
     "# save data into csv file\n",
     "csv_df = pd.read_excel('2023_bruins_scoring_regular_season.xlsx')\n",
     "\n",
-    "csv_df.to_csv('2023_bruins_scoring_regular_season.csv', header=True) # using second row for column names\n",
-    "\n",
-    "#new_df = pd.DataFrame(pd.read_csv('2023_bruins_scoring_regular_season.csv'))"
+    "csv_df.to_csv('2023_bruins_scoring_regular_season.csv', header=True) # using second row for column names"
    ]
   },
   {
